# raad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Raad.icns
packaging/: README.md
properties/Windows/: app.rc
properties/iOS/: Info.plist.in
properties/macOS/: Info.plist.in
src/core/: downloadertask.cpp  downloadertask.cppm  downloadmanager.cpp  downloadmanager.cppm  downloadmodel.cpp  downloadmodel.cppm  main.cpp
src/services/: power_monitor.cpp  power_monitor.cppm  update_client.cpp  update_client.cppm
src/updaterhelper/: main.cpp
src/utils/: category_utils.cpp  category_utils.cppm  download_utils.cpp  download_utils.cppm  version_utils.cpp  version_utils.cppm
tests/: backend_tests.cpp
ui/: Main.qml  utils.js
ui/Controls/: AddDownloadDialog.qml  AlphaGlass.qml  AppMenu.qml  AppMenuBar.qml  AppMenuBarItem.qml  AppMenuItem.qml  AppMenuSeparator.qml  AppMenuTrigger.qml  Button.qml  Card.qml  CheckBox.qml  ComboBox.qml  CommandActionButton.qml  CommandAddUrlButton.qml  Dialog.qml  DownloadDelegate.qml  DownloadDetailsDialog.qml  DownloadDetailsWindow.qml  DownloadListView.qml  GroupBox.qml  HorizontalLine.qml  HorizontalSpacer.qml  Label.qml  ProgressBar.qml  SidebarTreeItem.qml  SpinBox.qml  Switch.qml  TabBar.qml  TabButton.qml  Text.qml  TextField.qml  VerticalLine.qml  VerticalSpacer.qml  qmldir
ui/Core/: Animations.qml  AppGlobals.qml  Colors.qml  Elevation.qml  FontSystem.qml  Metrics.qml  Shadow.qml  Theme.qml  Typography.qml  qmldir
ui/Layout/: qmldir
